oops fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -145,7 +145,6 @@ article {
     color: white;
     font-weight: 600;
     font-size: 1.5em;
-    letter-spacing: 0.75px;
     display: inline-block;
     padding-left: 125px;
     padding-right: 125px;
@@ -248,6 +247,7 @@ article {
     color: white;
     font-weight: 600;
     font-size: 1em;
+    letter-spacing: 0.70px;
     display: inline-block;
     margin-top: 30px;
     margin-bottom: 30px;
